 * Set limits on lineedit frame size when needed.
 * A better criterion for deciding if a widget belongs to Plasma.
 * Force the pushbutton text colors.
 * Don't set the text color of Plasma menu titles to that of their menus when they aren't transparent.
 * Use gray values of colors for checking their contrast.
 * Force view-item text colors when item text is added as a label (as in VLC).

V0.8.14
---------
 * Distinguish between the focus and normal states of generic frames only if the frame focus elements exist.
 * Consider blurring for Qt5 Konsole.
 * Made Kvantum Manager see commas in the theme comment.

V0.8.13
---------
 * Use transformations inside the SVG image to reduce memory footprint.
 * Set limits on combobox sizes where there isn't enough space.
 * Fixed combobox focus state.
 * In Kvantum Manager, enable the popup blurring checkbox when both translucency and composite checkboxes are unchecked.
 * When blurring, don't go to the next ancestor window.

V0.8.12
---------
 * Added optional tab widget junctions for attachimg active tabs.
 * Draw disabled active tabs correctly.
 * Don't try to attach empty tabs (as in Kdenlive's track widget).
 * Try to attach the active tab to its tab widget even when the QStyle option of the tab widget frame doesn't exist (as in GoldenDict).
 * Force blurring for Yakuake too if it's forced for Konsole.
 * Put the check/radio button on the left side of the menu item. Fixed the menu item size too.

V0.8.11
---------
 * Ignore frame width for toolbuttons with just an arrow as icon.
 * Toolbuttons with popup menus were too wide.
 * Set limits on toolbutton frame sizes where there isn't enough space.
 * Set limits on frame and indicator sizes of toolbutton dropdown indicators where there isn't enough space.
 * Always limit indicator size to its bounding rectangle.
 * Translucency doesn't need internalWinId (only blurring does).

V0.8.10
---------
 * Added a hacking variable for (KDE) menu titles.